# DLIR-Allocator

./: .gitignore  CMakeLists.txt  README.md  data.csv  error.txt
Onnxs/scripts/export/: import_transfomers.py
RPCProtoInterface/: CMakeLists.txt  rpcinterface.grpc.pb.cc  rpcinterface.grpc.pb.h  rpcinterface.pb.cc  rpcinterface.pb.h  rpcinterface.proto
backup/data-2022-12-01/: readme.md
backup/data-2022-12-01/analyze/: config.py  get_ratios.py
backup/data-2022-12-24/: catalogue.json  readme.md
backup/data-2022-12-24/analyze/: config.py  get_ratios.py  get_statistics.py  plot.py
data/: catalogue copy.json  catalogue.json
data/BNST/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+960 more)
data/BNST/10979622204115654831/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+960 more)
data/BNST/11131973323028561508/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+960 more)
data/BNST/11145471626182783555/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  (+978 more)
data/BenchMark/: catalogue.json
data/DLIR/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+960 more)
data/FIFO/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+960 more)
data/OYST/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+960 more)
data/PARALLEL/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+960 more)
data/analyze/: Run.py  Run_childs.py  config.py  evaluate-test.py  evaluate.py  get_data.py  get_ratios.py  get_scenes.py  get_statistics.py  load_from_csv.py  plot.py
entrance/: readme.md
entrance/Allocator/: main.cpp  test_main.cpp
entrance/test/: CMakeLists.txt  TaskGenerate.h
include/GPUAllocator/: ExecutorManager.h  ModeCheck.h  ModelExecutor.h  Task.h  TaskDigest.h  TaskRegistration.h  TokenManager.h
include/RPCResponse/: GRPCInterface.h  IPs.h  RPCServer.h
include/Random/: PossionRandom.h  UniformRandom.h
include/Tensor/: TensorValue.hpp
include/ThreadSafe/: SafeQueue.hpp
scripts/: build.sh  clear_data.sh  test.sh  test_add_gpt.sh  test_add_gpt_workload.sh
sources/Common/: CMakeLists.txt
sources/GPUAllocator/: CMakeLists.txt  ExecutorManager.cpp  ModeCheck.cpp  ModelExecutor.cpp  Task.cpp  TaskDigest.cpp  TaskRegistration.cpp  TokenManager.cpp
sources/RPCResponse/: CMakeLists.txt  GRPCInterface.cpp  IPs.cpp  RPCServer.cpp
sources/Random/: CMakeLists.txt  PossionRandom.cpp  UniformRandom.cpp
sources/Tensor/: CMakeLists.txt
test/: test  test_gpu_allocator.cpp  test_module.cpp  test_possion.cpp  test_run_aLL_times.cpp  test_run_child_models.cpp  test_run_onnx.cpp  test_thread.cpp  test_thread_bug.cpp  test_use_json.cpp
testlib/: TaskGenerate.cpp  TaskGenerate.h
(+324858 files in other folders)
